// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`service-weather-item Renders \`service-weather-item\` with custom props 1`] = `
<div
  class="cursor-pointer weather-item v-card v-sheet v-sheet--tile theme--light mt-0 mr-0 mb-0 ml-0"
  style="height: 4em; color: white;"
>
  <div
    class="layout fill-height weather-item__content row justify-space-between"
  >
    <div
      class="flex position-relative fill-height"
    >
      <div
        class="layout justify-start blinking"
      >
        <div
          class="weather-item__service-name pa-3"
        />
      </div>
      <div
        class="layout weather-item__toolbar pt-1 pr-1 row align-center"
      >
        <c-no-events-icon-stub
          color="white"
          top="top"
        />
        <impact-state-indicator-stub
          class="mr-1"
          value="3"
        />
      </div>
      <i
        aria-hidden="true"
        class="v-icon weather-item__background material-icons theme--light white--text"
        style="font-size: 5em;"
      />
      <!---->
    </div>
    <!---->
    <!---->
  </div>
  <!---->
</div>
`;

exports[`service-weather-item Renders \`service-weather-item\` with full access 1`] = `
<div
  class="cursor-pointer weather-item v-card v-sheet v-sheet--tile theme--light mt-1 mr-3 mb-5 ml-7"
  style="height: 16em; color: white;"
>
  <div
    class="layout fill-height weather-item__content row justify-space-between"
  >
    <div
      class="flex position-relative fill-height"
    >
      <div
        class="layout justify-start"
      >
        <div
          class="weather-item__service-name pa-3"
        >
          <p>
            <strong>
              <span
                style="font-size: 18px;"
              />
            </strong>
          </p>
           
          <hr
            id="null"
          />
           
          <p />
           
          <p>
             Dernière mise à jour : 
          </p>
        </div>
      </div>
      <div
        class="layout weather-item__toolbar pt-1 pr-1 row align-center"
      >
        <c-no-events-icon-stub
          color="white"
          top="top"
        />
        <impact-state-indicator-stub
          class="mr-1"
          value="0"
        />
      </div>
      <i
        aria-hidden="true"
        class="v-icon weather-item__background material-icons theme--light white--text"
        style="font-size: 5em;"
      />
      <!---->
    </div>
    <!---->
    <alarm-state-counters-stub
      counters="[object Object]"
      types="state-types"
    />
  </div>
  <!---->
</div>
`;
